# PREVENTION

./: .gitignore  Makefile  PrevencionApp_Arquitectura_Tecnica.docx  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/application/dto/: dtos.py
backend/app/application/ports/: ml_model_port.py  ports.py
backend/app/application/services/: drift_detector.py
backend/app/application/use_cases/: obtener_historial.py  predecir_inflamacion.py  use_cases.py
backend/app/config/: container.py  settings.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: entities.py
backend/app/domain/services/: evaluador_clinico.py
backend/app/entrypoints/api/: dependencies.py  limiter.py  main.py
backend/app/entrypoints/api/routes/: formulario.py  paciente.py  resultados.py
backend/app/infrastructure/cache/: redis_client.py
backend/app/infrastructure/db/: supabase_adapter.py
backend/app/infrastructure/hashing/: sha256_adapter.py
backend/app/infrastructure/ml/: sklearn_adapter.py
backend/app/infrastructure/storage/: supabase_storage_adapter.py
backend/models/: .gitkeep
backend/tests/: conftest.py
backend/tests/e2e/: test_flujo_completo.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_domain_and_use_cases.py  test_drift_detector.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: index.css  main.jsx  (+1 more)
scripts/: train_dummy_model.py
(+34 files in other folders)
